; ModuleID = '/home/carl/AnghaBench/tg/extr_loop.c_clist_cb.c'
source_filename = "/home/carl/AnghaBench/tg/extr_loop.c_clist_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tgl_state = type { i32 }

@TLS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clist_cb(%struct.tgl_state* %0, i8* %1, i32 %2, i32 %3, i32* %4, i32** %5, i32* %6) #0 {
  %8 = alloca %struct.tgl_state*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32*, align 8
  store %struct.tgl_state* %0, %struct.tgl_state** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32** %5, i32*** %13, align 8
  store i32* %6, i32** %14, align 8
  %15 = load i32, i32* @TLS, align 4
  %16 = call i32 @on_started(i32 %15)
  ret void
}

declare dso_local i32 @on_started(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
